[FIX]#62044 The password security settings are not working.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Profile/_ChangePassword.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Profile/_ChangePassword.cshtml
@@ -1,45 +1,70 @@
 ﻿@model DH.Helpdesk.Web.Models.Profile.ProfileInputViewModel
-
-@using DH.Helpdesk.Web.Infrastructure
-<div class="container">
-        <table class="tableform">
-            <tr>
-                <td class="span3">
-                    @Translation.Get("Nytt lösenord", Enums.TranslationSource.TextTranslation)
-                </td>
-                <td>
-                    <input type="password" id="NewPassword" maxlength="20" />
-                </td>
-                <td>
-
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    @Translation.Get("Bekräfta lösenord", Enums.TranslationSource.TextTranslation)
-                </td>
-                <td>
-                    <input type="password" id="ConfirmPassword" maxlength="20" />
-                </td>
-                <td>
-
-                </td>
-            </tr>
-            <tr>
-                <td colspan="3">
-
-                </td>
-            </tr>
-            <tr>
-                <td></td>
-                <td>
-                    <input type="button" value="@Translation.Get("Spara", Enums.TranslationSource.TextTranslation)" id="btnSavePassword" class="btn" />
-                    <input type="button" value="@Translation.Get("Avbryt", Enums.TranslationSource.TextTranslation)" id="btnClose" class="btn" />
-                </td>
-            </tr>
-        </table>
-        <input type="hidden" id="id_user" value="@Model.User.Id" />
-   
+<div id="divPasswordDialog" class="modal hide fade" role="dialog">
+    <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h3>@Translation.GetCoreTextTranslation("Byt lösenord")</h3>
+    </div>
+    <div class="modal-body">
+        <div class="container">            
+            <form id="changePasswordForm">
+                <table class="tableform">
+                    <tr>
+                        <td></td>
+                        <td id="validation-summary" class="validation-summary-errors">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="span3">@Translation.GetCoreTextTranslation("Nytt lösenord")</td>
+                        <td><input type="password" id="NewPassword" name="NewPassword" maxlength="20"/></td>
+                    </tr>
+                    <tr>
+                        <td>@Translation.GetCoreTextTranslation("Bekräfta lösenord")</td>
+                        <td><input type="password" id="ConfirmPassword" name="ConfirmPassword" maxlength="20"/></td>
+                        
+                    </tr>
+                    <tr>
+                        <td colspan="2"></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>
+                            <button id="btnSavePassword" class="btn">@Translation.GetCoreTextTranslation("Spara")</button>
+                            <button id="btnClose" class="btn" data-dismiss="modal">@Translation.GetCoreTextTranslation("Avbryt")</button>
+                        </td>
+                    </tr>
+                </table>
+                </form>
+        </div>
+    </div>
 </div>
+<input type="hidden" id="id_user" value="@Model.User.Id" />
 
+@Scripts.Render("~/bundles/changepassword")
 
+<script type="text/javascript">
+    //Ready
+    $(function () {
+        var settings = {
+
+            PasswordChangeActionUrl: '@Url.Action("EditUserPassword", "Profile")',
+            passwordRules: {
+                MinLength: 8,
+                MinUpperCase: 1,
+                MinLowerCase: 1,
+                MinDigits: 1,
+                MinSpecial: 1,
+                SpecialChars: '!@@#=$&?*/'
+            },
+            translations: {
+                PasswordChangedConfirmMessage: '@Translation.GetForJS("Lösenordet har ändrats")',
+                PasswordChangeErrorMessage: '@Translation.GetForJS("Det nya lösenordet bekräftades inte korrekt. Kontrollera att nytt lösenord och bekräftat lösenord stämmer överens")',
+                PasswordRequiredValMessage: '@Translation.GetForJS("Fält") \'@Translation.GetCoreTextTranslation("Nytt lösenord")\' @Translation.GetForJS("måste anges")',
+                ConfirmPasswordRequiredValMessage: '@Translation.GetForJS("Fält") \'@Translation.GetCoreTextTranslation("Bekräfta lösenord")\' @Translation.GetForJS("måste anges")',
+                PasswordMinLengthValMessage: '@Translation.GetForJS("Lösenord är inte giltigt. Minst antal tecken är: ")' + '{0}',
+                StrongPasswordValMessage: '@Translation.GetForJS("Lösenord är inte giltigt. Minst 8 tecken, varav en stor bokstav, en liten bokstav, en siffra och ett special tecken (!@#=$&?*).")',
+                ConfirmPasswordMatchValMessage: '@Translation.GetForJS("Det nya lösenordet bekräftades inte korrekt. Kontrollera att nytt lösenord och bekräftat lösenord stämmer överens")'
+            }
+        };
+        window.ChangePasswordDialog.Init(settings);
+    });
+</script>
