--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Profile/Edit.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Profile/Edit.cshtml
@@ -1,11 +1,8 @@
-﻿@using DH.Helpdesk.Web.Infrastructure
-@using OfficeOpenXml.FormulaParsing.Excel.Functions.Math
-@model DH.Helpdesk.Web.Models.Profile.ProfileInputViewModel
+﻿@model DH.Helpdesk.Web.Models.Profile.ProfileInputViewModel
 @{
     ViewBag.Title = "Edit";
-}
-@using (Html.BeginForm("edit", "profile", new { id = Model.User.Id }, FormMethod.Post, new { id = "target" }))
-{
+ }
+
 <div class="secnavs fixed">
     <div class="pull-left">
         <ul class="secnav">
@@ -13,12 +10,17 @@
         </ul>
     </div>
 </div>
-@Html.Partial("_Input", Model)
-
+@using (Html.BeginForm("edit", "profile", new { id = Model.User.Id }, FormMethod.Post, new { id = "target" }))
+{
+    @Html.Partial("_Input", Model)
 }
+
+@Html.Partial("_ChangePassword", Model)
+
 @section Scripts {
     <script type="text/javascript">
-        $(function() {
+        $(function () {
+
             var validator = $("#target").validate({
                 rules: {
                     "User.UserID": {
@@ -49,7 +51,6 @@
                     }
                 },
                 submitHandler: function(form) {
-                    submitForm();
                     form.submit();
                 }
             });           
