--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/_Layout.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/_Layout.cshtml
@@ -307,7 +307,7 @@
                                         <li>
                                             <a href="@Url.Action(MvcInvoicesUrlName.Overview.Index, MvcInvoicesUrlName.Overview.Controller, new { area = MvcInvoicesUrlName.Name })">
                                                 <img src="@Url.Content("~/Content/icons/order.png")" />
-                                                @Translation.Get("Fakturering")
+                                                @Translation.Get("Fakturering tid")
                                             </a>
                                         </li>
                                     }
