[ADD] Translation Admin - SelfService settings

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/SelfServiceSetting/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/SelfServiceSetting/Index.cshtml
@@ -136,7 +136,7 @@
                                     <td>
                                         <input type="checkbox" name="customer.ShowOperationalLogOnExtPage" @(Model.Customer.ShowOperationalLogOnExtPage == 1 ? "checked=checked" : "") value="1" />
                                         <input type="hidden" name="customer.ShowOperationalLogOnExtPage" value="0" />
-                                        &nbsp; &nbsp; @Translation.Get("Visa Drifftlogg på startsidan", Enums.TranslationSource.TextTranslation)
+                                        &nbsp; &nbsp; @Translation.Get("Visa Driftlogg på startsidan", Enums.TranslationSource.TextTranslation)
                                     </td>                                  
                                 </tr>
                                 <tr>
