--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/_ChangePassword.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/_ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model DH.Helpdesk.Web.Models.Profile.ProfileInputViewModel
+﻿@model DH.Helpdesk.Web.Models.Shared.ChangePasswordModel
 <div id="divPasswordDialog" class="modal hide fade" role="dialog">
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
@@ -9,21 +9,15 @@
             <form id="changePasswordForm">
                 <table class="tableform">
                     <tr>
-                        <td></td>
-                        <td id="validation-summary" class="validation-summary-errors">
-                        </td>
-                    </tr>
-                    <tr>
                         <td class="span3">@Translation.GetCoreTextTranslation("Nytt lösenord")</td>
                         <td><input type="password" id="NewPassword" name="NewPassword" maxlength="20"/></td>
                     </tr>
                     <tr>
                         <td>@Translation.GetCoreTextTranslation("Bekräfta lösenord")</td>
                         <td><input type="password" id="ConfirmPassword" name="ConfirmPassword" maxlength="20"/></td>
-                        
                     </tr>
                     <tr>
-                        <td colspan="2"></td>
+                        <td colspan="2" id="validation-summary" class="validation-summary-errors"></td>
                     </tr>
                     <tr>
                         <td></td>
@@ -33,11 +27,10 @@
                         </td>
                     </tr>
                 </table>
-                </form>
+            </form>
         </div>
     </div>
 </div>
-<input type="hidden" id="id_user" value="@Model.User.Id" />
 
 @Scripts.Render("~/bundles/changepassword")
 
@@ -45,24 +38,29 @@
     //Ready
     $(function () {
         var settings = {
-
-            PasswordChangeActionUrl: '@Url.Action("EditUserPassword", "Profile")',
-            passwordRules: {
+            UserId: @Model.UserId,
+            CheckPasswordUniqueActionUrl: '@Url.Action("CheckPasswordUnique", "Password")',
+            PasswordChangeActionUrl: '@Url.Action("ChangePassword", "Password")',
+            UseComplexPassword: @Json.Encode(Model.UseComplexPassword),
+            PasswordMinLength: @Model.MinPasswordLength,     
+            ComplexPasswordRules: {
                 MinLength: 8,
                 MinUpperCase: 1,
                 MinLowerCase: 1,
                 MinDigits: 1,
                 MinSpecial: 1,
-                SpecialChars: '!@@#=$&?*/'
+                SpecialChars: '!@@#=$&?*'
             },
-            translations: {
+            Translations: {
                 PasswordChangedConfirmMessage: '@Translation.GetForJS("Lösenordet har ändrats")',
                 PasswordChangeErrorMessage: '@Translation.GetForJS("Det nya lösenordet bekräftades inte korrekt. Kontrollera att nytt lösenord och bekräftat lösenord stämmer överens")',
                 PasswordRequiredValMessage: '@Translation.GetForJS("Fält") \'@Translation.GetCoreTextTranslation("Nytt lösenord")\' @Translation.GetForJS("måste anges")',
                 ConfirmPasswordRequiredValMessage: '@Translation.GetForJS("Fält") \'@Translation.GetCoreTextTranslation("Bekräfta lösenord")\' @Translation.GetForJS("måste anges")',
                 PasswordMinLengthValMessage: '@Translation.GetForJS("Lösenord är inte giltigt. Minst antal tecken är: ")' + '{0}',
                 StrongPasswordValMessage: '@Translation.GetForJS("Lösenord är inte giltigt. Minst 8 tecken, varav en stor bokstav, en liten bokstav, en siffra och ett special tecken (!@#=$&?*).")',
-                ConfirmPasswordMatchValMessage: '@Translation.GetForJS("Det nya lösenordet bekräftades inte korrekt. Kontrollera att nytt lösenord och bekräftat lösenord stämmer överens")'
+                ConfirmPasswordMatchValMessage: '@Translation.GetForJS("Det nya lösenordet bekräftades inte korrekt. Kontrollera att nytt lösenord och bekräftat lösenord stämmer överens")',
+                //todo: translate
+                PasswordEqualsExistingValMessage: 'New password shall not match existing password'
             }
         };
         window.ChangePasswordDialog.Init(settings);
