[FIX]#62044 - The password security settings are not working. MinPassword length save issue.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/CustomerSettings/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/CustomerSettings/_Input.cshtml
@@ -736,11 +736,11 @@
     function disablePasswordLength() {
 
         if ($('#setting_ComplexPassword').is(':checked')) {
-            $("#Setting_MinPasswordLength").val("0");
+            //$("#Setting_MinPasswordLength").val("0");
             $("#Setting_MinPasswordLength").prop("disabled", true);
         } else {
             $("#Setting_MinPasswordLength").prop("disabled", false);
-            $("#Setting_MinPasswordLength").val("0");
+            //$("#Setting_MinPasswordLength").val("0");
         }
     }
 
