[FIX]#62044 - The password security settings are not working. Translations added.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/_ChangePassword.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/_ChangePassword.cshtml
@@ -59,8 +59,7 @@
                 PasswordMinLengthValMessage: '@Translation.GetForJS("Lösenord är inte giltigt. Minst antal tecken är: ")' + '{0}',
                 StrongPasswordValMessage: '@Translation.GetForJS("Lösenord är inte giltigt. Minst 8 tecken, varav en stor bokstav, en liten bokstav, en siffra och ett special tecken (!@#=$&?*).")',
                 ConfirmPasswordMatchValMessage: '@Translation.GetForJS("Det nya lösenordet bekräftades inte korrekt. Kontrollera att nytt lösenord och bekräftat lösenord stämmer överens")',
-                //todo: translate
-                PasswordEqualsExistingValMessage: 'New password shall not match existing password'
+                PasswordEqualsExistingValMessage: '@Translation.GetForJS("Nytt lösenord kan inte vara samma som nuvarande lösenord")'
             }
         };
         window.ChangePasswordDialog.Init(settings);
