--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/_ChangePassword.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/_ChangePassword.cshtml
@@ -39,8 +39,8 @@
     $(function () {
         var settings = {
             UserId: @Model.UserId,
-            CheckPasswordUniqueActionUrl: '@Url.Action("CheckPasswordUnique", "Password")',
-            PasswordChangeActionUrl: '@Url.Action("ChangePassword", "Password")',
+            CheckPasswordUniqueActionUrl: '@Url.Action("CheckPasswordUnique", "Password", new { area = "" })',
+            PasswordChangeActionUrl: '@Url.Action("ChangePassword", "Password", new { area = "" })',
             UseComplexPassword: @Json.Encode(Model.UseComplexPassword),
             PasswordMinLength: @Model.MinPasswordLength,     
             ComplexPasswordRules: {
